@@ -39,6 +39,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13896: Make shelf instances work with 'with' as context managers.
+  Original patch by Filip Gruszczyński.
+
 - Issue #15417: Add support for csh and fish in venv activation scripts.
 
 - Issue #16123: IDLE - deprecate running without a subprocess.
